--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,15 +63,16 @@ jobs:
     # テスト
     - name: Test with Gradle
       run: ./gradlew test --stacktrace
-
+      - name: Run Unit Tests
+        run: ./gradlew GameActivityTest
+        
+  # run UI tests
   ui-test:
     name: Test
     runs-on: macos-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
-      - name: Run Unit Tests
-        run: ./gradlew testStagingDebugUnitTest
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -79,5 +80,4 @@ jobs:
           target: default
           arch: x86
           profile: Nexus 6
-          script: ./gradlew connectedCheck --debug
-
+          script: ./gradlew connectedCheck --stacktrace
