--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,10 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_10
-        targetCompatibility JavaVersion.VERSION_1_10
+//        sourceCompatibility JavaVersion.VERSION_1_10
+//        targetCompatibility JavaVersion.VERSION_1_10
+        sourceCompatibility = 1.11
+        targetCompatibility = 1.11
     }
 }
 
