--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Test with Gradle
         run: ./gradlew test --stacktrace
       - name: Run Unit Tests
-        run: ./gradlew GameActivityTest
+        run: ./gradlew androidTest
         
   # run UI tests
   ui-test:
@@ -72,6 +72,12 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+      # JDKのセットアップ
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
