--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,5 +84,5 @@ jobs:
           api-level: 29
           target: default
           arch: x86
-          profile: Nexus 6
+          profile: Pixel 3
           script: ./gradlew connectedCheck --stacktrace
