--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Test with Gradle
         run: ./gradlew test --stacktrace
       - name: Run Unit Tests
-        run: ./gradlew androidTest
+        run: ./gradlew app/src/androidTest/java/io.kokoichi.sample.rhythmgame
         
   # run UI tests
   ui-test:
@@ -84,5 +84,5 @@ jobs:
           api-level: 29
           target: default
           arch: x86
-          profile: Pixel 3
+          profile: Nexus 6
           script: ./gradlew connectedCheck --stacktrace
