--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,13 @@ jobs:
     # コンパイル
     - name: Run Compile
       run: ./gradlew assembleDebug
-
+      - name: Upload apk file
+        uses: actions/upload-artifact@v2
+        with:
+          name: apk
+          path: app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 1
+          
   test:
     runs-on: ubuntu-latest
     steps:
@@ -63,16 +69,16 @@ jobs:
       - name: Test with Gradle
         run: ./gradlew test --stacktrace
       - name: Run Unit Tests
-        run: ./gradlew app/src/androidTest/java/io.kokoichi.sample.rhythmgame/GameViewTest --stacktrace
+        run: ./gradlew test --stacktrace
         
-  # run UI tests
+  # run  tests
   ui-test:
     name: Test
     runs-on: macos-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
-      # JDKのセットアップ
+      # setup JDK
       - name: set up JDK 11
         uses: actions/setup-java@v2
         with:
