--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "io.kokoichi.sample.rhythmgame"
-        minSdkVersion 26
-        targetSdkVersion 30
+        minSdkVersion 23
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -23,10 +23,8 @@ android {
         }
     }
     compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_10
-//        targetCompatibility JavaVersion.VERSION_1_10
-        sourceCompatibility = 1.11
-        targetCompatibility = 1.11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -35,6 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     testImplementation 'junit:junit:4.+'
 
