--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,23 +53,23 @@ jobs:
         path: app/build/outputs/apk/debug/app-debug.apk
         retention-days: 1
           
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      # チェックアウト
-      - uses: actions/checkout@v2
-
-      # JDKのセットアップ
-      - name: set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-      # テスト
-      - name: Test with Gradle
-        run: ./gradlew test --stacktrace
-      - name: Run Unit Tests
-        run: ./gradlew test --stacktrace
+#  test:
+#    runs-on: ubuntu-latest
+#    steps:
+#      # チェックアウト
+#      - uses: actions/checkout@v2
+#
+#      # JDKのセットアップ
+#      - name: set up JDK 11
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'zulu'
+#          java-version: '11'
+#      # テスト
+#      - name: Test with Gradle
+#        run: ./gradlew test --stacktrace
+#      - name: Run Unit Tests
+#        run: ./gradlew test --stacktrace
         
   # run  tests
   ui-test:
