--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.kokoichi.sample.rhythmgame">
+    package="com.example.ciwotukuritai">
 
     <application
         android:allowBackup="true"
@@ -8,14 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RhythmGame">
-        <activity android:name=".GameActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/Theme.RhythmGame.noActionBar"></activity>
+        android:theme="@style/Theme.CiWoTukuritai">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/Theme.RhythmGame.noActionBar">
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.CiWoTukuritai.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
